feat!: Version2. Updated path selection. Refactored check logic. Now using temporary file to store dictionary